// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductPrice component should render correctly if price is 5$ 1`] = `
<div
  className="product-price"
>
  Price:
  <span>
    5
    $
  </span>
</div>
`;

exports[`ProductPrice component should render discount message if user is authenticated 1`] = `
<div
  className="product-price"
>
  Price:
  <span>
    5
    $
  </span>
  <p>
    You have a 10% discount!
  </p>
</div>
`;

exports[`ProductPrice component should render null if price is undefined 1`] = `null`;
